feat: Phase 1 Enhanced Authentication Implementation
🔒 Security-by-Default Architecture:
- Implemented service JWT generation for API-MCP communication
- Added Microsoft GUID-based user registration system
- Created GUID validation and authentication attributes
- Enhanced all MCP tools with authentication-aware requests

🛠️ Core Features Added:
- ServiceJwtService: JWT generation with user context
- UserRegistrationController: Complete user registration API
- RequireUserGuidAttribute: GUID validation for API endpoints
- GuidAuthenticatedControllerBase: Base controller for GUID auth
- AuthenticatedMcpToolBase: Enhanced authentication for MCP tools

🎯 Authentication Modes:
- Disabled: GUID tracking with service JWT security
- BearerToken: JWT Bearer token authentication
- EntraExternalId: Framework for future OAuth implementation

🧪 Testing & Configuration:
- Updated appsettings for new authentication modes
- Enhanced modular testing system
- Complete documentation in ISSUE-10-ENHANCED-AUTHENTICATION-STRATEGY.md

✅ All MCP tools updated with GUID validation and authenticated requests
✅ API controllers enhanced with GUID authentication requirements
✅ Service-to-service security enforced regardless of user auth mode

Related to: GitHub Issue #10 - Enhanced Authentication Showcase

--- a/FabrikamApi/src/appsettings.Development.json
+++ b/FabrikamApi/src/appsettings.Development.json
@@ -18,7 +18,7 @@
     "JsonSeedDataPath": "Data/SeedData"
   },
   "Authentication": {
-    "Mode": "BearerToken",
+    "Mode": "Disabled",
     "AspNetIdentity": {
       "Jwt": {
         "SecretKey": "development-jwt-secret-key-for-local-testing-only-not-for-production-use",
@@ -50,7 +50,7 @@
     }
   },
   "ApiAuthentication": {
-    "Mode": "BearerToken",
+    "Mode": "Disabled",
     "AspNetIdentity": {
       "Jwt": {
         "SecretKey": "development-jwt-secret-key-for-local-testing-only-not-for-production-use",
